Add page content

--- a/about.html
+++ b/about.html
@@ -93,12 +93,12 @@
         <div class="container">
             <div class="row">
                 <div class="col upper-head">
-                  <h3 class="header-text-a">Hello, Sharing the World</h3>
+                  <h3 class="header-text-a">Welcome! Travel the World</h3>
                 </div>
              </div>
              <div class="row">
                  <div class="col">
-                   <h1 class="header-text-b">CREATIVE COMMONS GLOBAL TALENT 2015</h1>
+                   <h1 class="header-text-b">A CREATIVE SPACE FOR TRAVEL AGENTS 2022</h1>
                  </div>
               </div>
               <div class="row header-tect-c-div">
@@ -110,7 +110,7 @@ molestiae quas vel sint commodi repudiandae consequuntur voluptatum laboru </p>
               </div>
               <div class="row">
                   <div class="col">
-                    <p class="header-text-e">Please contact us per email for further questions about awesome travel agency <br> <strong>xyz@gmail.com</strong></p>
+                    <p class="header-text-e">Please contact us per email for further questions about awesome travel agency <br> <strong>awesome@travels.com</strong></p>
                   </div>
                </div>
           </div>
@@ -119,7 +119,7 @@ molestiae quas vel sint commodi repudiandae consequuntur voluptatum laboru </p>
 
   <section class="middle-section">
     <div class="middle-section-head">
-        <h2>Creative Commons <br>Global 2015 logo</h2>
+        <h2>Creative Space <br>Be the best!</h2>
         <hr>
     </div>
 
@@ -132,55 +132,30 @@ molestiae quas vel sint commodi repudiandae consequuntur voluptatum laboru </p>
        <img src="./images/organaizer.gif" alt="">
     </div>
   </section>
-
-  <!-- <section class="middle-section">
-    <div class="middle-section-head">
-        <h2>See the past <br>CC Global Summit</h2>
-        <hr>
-    </div>
-
-    <div class="top-program-1">
-      <p>Take a look at the last two global summits for demo</p>
-    </div>
-
-    <div class="top-program-2b">
-       <h4>2015</h4>
-       <p>cc Global Summit in Buenos Aires</p>
-    </div>
-    <div class="top-program-2b">
-       <h4>2016</h4>
-       <p>cc Global Summit in Buenos Aires</p>
-    </div>
-    <div class="top-program-2b">
-       <h4>2017</h4>
-       <p>cc Global Summit in Buenos Aires</p>
-    </div>
-  </section> -->
-
   <section class="middle-section">
     <div class="middle-section-head">
-        <h2>See the past <br>CC Global Summit</h2>
+        <h2>See the past <br>Travel Agency events</h2>
         <hr>
     </div>
       <div class="col top-program-1">
-        <p>Take a look at the last two global summits for demo</p>
+        <p>Take a look at the previous summits that we've held</p>
       </div>
     <div class="row">
       <div class="col-sm-6 col-md-2 top-program-2b">
          <h4>2015</h4>
-         <p>cc Global Summit in Buenos Aires</p>
+         <p>Travel in Style summit, Seoul</p>
       </div>
       <div class="col-sm-6 col-md-2 top-program-2b">
          <h4>2016</h4>
-         <p>cc Global Summit in Buenos Aires</p>
+         <p>Air Comfort Travelling, Bahamas</p>
       </div>
       <div class="col-sm-6 col-md-2 top-program-2b">
          <h4>2017</h4>
-         <p>cc Global Summit in Buens Aires</p>
+         <p>Making the best of holidays, Nairobi</p>
       </div>
       <div class="col-sm-6 col-md-2 top-program-2b">
          <h4>2018</h4>
-         <p>cc Global Summit in Buenos Aires</p>
+         <p>The World's diversity, Bangalore</p>
       </div>
     </div>
 
@@ -191,7 +166,7 @@ molestiae quas vel sint commodi repudiandae consequuntur voluptatum laboru </p>
   <section class="patners">
       <div class="row outer-bottom-partner-head">
         <div class="col-md-6 bottom-partner-head">
-            <h2>Partners</h2>
+            <h2>Our Sponsors</h2>
             <hr>
         </div>
       </div>
