--- a/index.html
+++ b/index.html
@@ -93,12 +93,12 @@
         <div class="container">
             <div class="row">
                 <div class="col upper-head">
-                  <h3 class="header-text-a">Hello, Sharing the World</h3>
+                  <h3 class="header-text-a">Welcome! Travel the World</h3>
                 </div>
              </div>
              <div class="row">
                  <div class="col">
-                   <h1 class="header-text-b">CREATIVE COMMONS GLOBAL TALENT 2015</h1>
+                   <h1 class="header-text-b">A CREATIVE SPACE FOR TRAVEL AGENTS 2022</h1>
                  </div>
               </div>
               <div class="row header-tect-c-div">
@@ -109,7 +109,7 @@ molestiae quas vel sint commodi repudiandae consequuntur voluptatum laboru </p>
               </div>
               <div class="row">
                   <div class="col">
-                    <h1 class="header-text-d">2015.10.15 THURSDAY</h1>
+                    <h1 class="header-text-d">2022.01.28 SATURDAY</h1>
                     <p class="header-text-e">@national meseum of kenya</p>
                   </div>
                </div>
@@ -127,7 +127,7 @@ molestiae quas vel sint commodi repudiandae consequuntur voluptatum laboru </p>
             <div class="col-sm-6 col-md-2 col-lg-2 top-program-1">
               <div class="top-program">
                 <img src="./images/icons/exhibition.png" alt="exhibition-image">
-                <p>ABCD</p>
+                <p>Destination</p>
               </div>
               <div class="top-program-2">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia</p>
@@ -136,7 +136,7 @@ molestiae quas vel sint commodi repudiandae consequuntur voluptatum laboru </p>
             <div class="col-sm-6 col-md-2 col-lg-2 top-program-1">
               <div class="top-program">
                 <img src="./images/icons/forum.png" alt="forum-image">
-                <p>ABCD</p>
+                <p>Marketing</p>
               </div>
               <div class="top-program-2">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia</p>
@@ -145,7 +145,7 @@ molestiae quas vel sint commodi repudiandae consequuntur voluptatum laboru </p>
             <div class="col-sm-6 col-md-2 col-lg-2 top-program-1">
               <div class="top-program">
                 <img src="./images/icons/ignite.png" alt="ignite-image">
-                <p>ABCD</p>
+                <p>Packaging</p>
               </div>
               <div class="top-program-2">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia</p>
@@ -154,7 +154,7 @@ molestiae quas vel sint commodi repudiandae consequuntur voluptatum laboru </p>
             <div class="col-sm-6 col-md-2 col-lg-2 top-program-1">
               <div class="top-program">
                 <img src="./images/icons/lecture.png" alt="lecture-image">
-                <p>ABCD</p>
+                <p>Partnerships</p>
               </div>
               <div class="top-program-2">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia</p>
@@ -163,7 +163,7 @@ molestiae quas vel sint commodi repudiandae consequuntur voluptatum laboru </p>
             <div class="col-sm-6 col-md-2 col-lg-2 top-program-1">
               <div class="top-program">
                 <img src="./images/icons/workshop.png" alt="workshop-image">
-                <p>ABCD</p>
+                <p>Customer</p>
               </div>
               <div class="top-program-2">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia</p>
@@ -172,7 +172,7 @@ molestiae quas vel sint commodi repudiandae consequuntur voluptatum laboru </p>
         </div>
         <div class="row" >
               <!-- <button id="middle-section-btn" type="button" class="btn btn-primary">Blue</button> -->
-              <button id="middle-section-btn" type="button" class="btn">Join CC Global Summit 2015</button>
+              <button id="middle-section-btn" type="button" class="btn">Participate in the 2022 Summit</button>
               <a id="desktop-middle-section-btn" class="btn" href="#">SEE THE WHOLE PROGRAM</a>
         </div>
     </div>
@@ -189,50 +189,6 @@ molestiae quas vel sint commodi repudiandae consequuntur voluptatum laboru </p>
               <div id="dyna-bottom-section">
 
               </div>
-              <!-- <div class="col-md-6 top-feature">
-                <div class="top-feature-1">
-                  <img src="./images/rich.jpg" alt="snall-image">
-                </div>
-                <div class="top-feature-2">
-                  <h4>Yochai Benkler</h4>
-                  <h6><em>Barkman Professor at Havard Technical College of educartion</em></h6>
-                  <hr>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia</p>
-                </div>
-              </div>
-              <div class="col-md-6 top-feature">
-                <div class="top-feature-1">
-                  <img src="./images/rich.jpg" alt="snall-image">
-                </div>
-                <div class="top-feature-2">
-                  <h4>Yochai Benkler</h4>
-                  <h6><em>Barkman Professor at Havard Technical College of educartion</em></h6>
-                  <hr>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia</p>
-                </div>
-              </div>
-              <div class="col-md-6 top-feature">
-                <div class="top-feature-1">
-                  <img src="./images/rich.jpg" alt="snall-image">
-                </div>
-                <div class="top-feature-2">
-                  <h4>Yochai Benkler</h4>
-                  <h6><em>Barkman Professor at Havard Technical College of educartion</em></h6>
-                  <hr>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia</p>
-                </div>
-              </div>
-              <div class="col-md-6 top-feature">
-                <div class="top-feature-1">
-                  <img src="./images/rich.jpg" alt="snall-image">
-                </div>
-                <div class="top-feature-2">
-                  <h4>Yochai Benkler</h4>
-                  <h6><em>Barkman Professor at Havard Technical College of educartion</em></h6>
-                  <hr>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia</p>
-                </div>
-              </div> -->
           </div>
       </div>
       <div class="show-more-wrap">
@@ -243,7 +199,7 @@ molestiae quas vel sint commodi repudiandae consequuntur voluptatum laboru </p>
   <section class="patners">
       <div class="row outer-bottom-partner-head">
         <div class="col-md-6 bottom-partner-head">
-            <h2>Partners</h2>
+            <h2>Our Sponsors</h2>
             <hr>
         </div>
       </div>
