Make changes as suggested byt the project reviewer

--- a/index.html
+++ b/index.html
@@ -119,48 +119,48 @@ molestiae quas vel sint commodi repudiandae consequuntur voluptatum laboru </p>
 
   <section class="middle-section">
     <div class="container middle-section-container">
+          <div class="col-md-12 col-lg-12 middle-section-head">
+              <h2>Main Program</h2>
+              <hr>
+          </div>
         <div class="row inner-middle-section-container">
-            <div class="col-md-12 col-lg-12 middle-section-head">
-                <h2>Main Program</h2>
-                <hr>
-            </div>
-            <div class="col-sm-6 col-md-2 col-lg-2 top-program-1">
-              <div class="top-program">
-                <img src="./images/icons/exhibition.png" alt="exhibition-image">
-                <p>Destination</p>
-              </div>
-              <div class="top-program-2">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia</p>
-              </div>
-            </div>
-            <div class="col-sm-6 col-md-2 col-lg-2 top-program-1">
-              <div class="top-program">
-                <img src="./images/icons/forum.png" alt="forum-image">
-                <p>Marketing</p>
-              </div>
-              <div class="top-program-2">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia</p>
-              </div>
-            </div>
-            <div class="col-sm-6 col-md-2 col-lg-2 top-program-1">
-              <div class="top-program">
-                <img src="./images/icons/ignite.png" alt="ignite-image">
-                <p>Packaging</p>
-              </div>
-              <div class="top-program-2">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia</p>
-              </div>
-            </div>
-            <div class="col-sm-6 col-md-2 col-lg-2 top-program-1">
-              <div class="top-program">
-                <img src="./images/icons/lecture.png" alt="lecture-image">
-                <p>Partnerships</p>
-              </div>
-              <div class="top-program-2">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia</p>
-              </div>
-            </div>
-            <div class="col-sm-6 col-md-2 col-lg-2 top-program-1">
+              <article class="col-sm-6 col-md-2 col-lg-2 top-program-1">
+                <div class="top-program">
+                  <img src="./images/icons/exhibition.png" alt="exhibition-image">
+                  <p>Destination</p>
+                </div>
+                <div class="top-program-2">
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia</p>
+                </div>
+              </article>
+              <article class="col-sm-6 col-md-2 col-lg-2 top-program-1">
+                <div class="top-program">
+                  <img src="./images/icons/forum.png" alt="forum-image">
+                  <p>Marketing</p>
+                </div>
+                <div class="top-program-2">
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia</p>
+                </div>
+              </article>
+              <article class="col-sm-6 col-md-2 col-lg-2 top-program-1">
+                <div class="top-program">
+                  <img src="./images/icons/ignite.png" alt="ignite-image">
+                  <p>Packaging</p>
+                </div>
+                <div class="top-program-2">
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia</p>
+                </div>
+              </article>
+              <article class="col-sm-6 col-md-2 col-lg-2 top-program-1">
+                <div class="top-program">
+                  <img src="./images/icons/lecture.png" alt="lecture-image">
+                  <p>Partnerships</p>
+                </div>
+                <div class="top-program-2">
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia</p>
+                </div>
+            </article>
+            <article class="col-sm-6 col-md-2 col-lg-2 top-program-1">
               <div class="top-program">
                 <img src="./images/icons/workshop.png" alt="workshop-image">
                 <p>Customer</p>
@@ -168,7 +168,7 @@ molestiae quas vel sint commodi repudiandae consequuntur voluptatum laboru </p>
               <div class="top-program-2">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia</p>
               </div>
-            </div>
+            </article>
         </div>
         <div class="row" >
               <!-- <button id="middle-section-btn" type="button" class="btn btn-primary">Blue</button> -->
